--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   bloc: ^9.0.0
   cupertino_icons: ^1.0.8
+  flutter_bloc: ^9.1.1
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.9.0
