--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,13 @@ environment:
 dependencies:
   bloc: ^9.0.0
   cupertino_icons: ^1.0.8
-  flutter_bloc: ^9.1.1
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
   font_awesome_flutter: ^10.9.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  modal_progress_hud_nsn: ^0.5.1
 
 dev_dependencies:
   build_runner: ^2.5.4
