--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,11 +41,15 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.5.4
-
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   hive_generator: ^2.0.1
+  flutter_launcher_icons: ^0.14.4
+
+flutter_launcher_icons:
+  android: true
+  image_path: "assets/images/5914815.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
